# rust-key-vault

./: .gitignore  Cargo.toml  README.md
examples/: key_operations.rs
src/vault/: lib.rs
src/vault/http/: authenticate_header.rs  authorization_header.rs  client.rs  mod.rs  rest.rs  vault_client.rs
tests/: test_hello_world.rs  test_vault.rs  tests.rs
tests/http/: mod.rs  test_authenticate_header.rs  test_authorization_header.rs  test_azure_vault_client.rs  test_w_authorization.rs
tests/support/: paths.rs
