[package]

name = "vault"
version = "0.0.1"
authors = ["David Justice <david@devigned.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/devigned/rust-azure-key-vault.git"
description = "Azure Key Vault client for Rust"

[lib]
name = "vault"
path = "src/vault/lib.rs"

[dependencies]
log = "*"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.oauth-client]
git = "https://github.com/devigned/oauth-client-rs"

[[bin]]
name = "vault"
test = false
doc = false

[[test]]
name = "tests"

[[bench]]
name = "tests"
path = "tests/tests.rs"
