[package]

name = "vault"
version = "0.0.1"
authors = ["David Justice <david@devigned.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/devigned/rust-azure-key-vault.git"
description = "Azure Key Vault client for Rust"

[lib]
name = "vault"
path = "src/vault/lib.rs"

[dependencies]
log = "*"
url = "*"
regex = "*"
rustc-serialize = "*"
rust-crypto = "*"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
rev = "2ce4385c163e1a9a393c89743cf04e047b776e83"

[[bin]]
name = "vault"
test = false
doc = false

[[test]]
name = "tests"

[[bench]]
name = "tests"
path = "tests/tests.rs"
